--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,9 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
+    animation: Logo-slide 4s linear, App-logo-spin infinite 20s linear 4s;
+    /* animation: App-logo-spin infinite 20s linear; */
   }
 }
 
@@ -22,10 +24,23 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow: hidden;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+@keyframes Logo-slide {
+  0% {
+    margin-left: 110%;
+  }
+  50% {
+    height: 50vmin;
+  }
+  100% {
+    margin-left: 0%;
+  }
 }
 
 @keyframes App-logo-spin {
